--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
  --bg:#f5f5f5;--card:#ffffff;--text:#000000;--border:#cccccc;--accent:#4caf50;--danger:#d9534f;--success:#28a745;--yellow:#fff200;--font:Arial,sans-serif;
 }
 
+/* --- OPTIMASI PENAJAMAN KHUSUS IPHONE (ACC) --- */
+* { -webkit-font-smoothing: antialiased; }
+@media screen and (max-width: 768px) {
+  /* Memberi kontras tambahan pada teks di dalam tabel agar tidak pudar di Safari */
+  #tbMasuk input, #tbKeluar input, .saldo, .total, #totalMasuk, #totalKeluar, .saldo-akhir {
+    text-shadow: 0.5px 0.5px 1px rgba(0,0,0,0.3);
+  }
+}
+
 /* --- STYLE WELCOME SCREEN --- */
 #welcomeScreen {
     position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
@@ -225,16 +234,12 @@ function masukWeb() {
     window.scrollTo(0,0);
 }
 
-// FUNGSI PENGUNJUNG (DIPERBARUI OLEH ASISTEN ATAS PERINTAH TUAN)
 function openPengunjung() {
     toggleMenu();
     const modal = document.getElementById('modalPengunjung');
     const list = document.getElementById('listPengunjung');
     const btnHapus = document.getElementById('btnHapusPengunjung');
-    
-    // Tampilkan tombol hapus hanya untuk Admin
     btnHapus.style.display = isAdmin ? 'block' : 'none';
-    
     list.innerHTML = "Memuat daftar...";
     modal.style.display = 'block';
 
