--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
  --bg:#f5f5f5;--card:#ffffff;--text:#000000;--border:#cccccc;--accent:#4caf50;--danger:#d9534f;--success:#28a745;--yellow:#fff200;--font:Arial,sans-serif;
 }
 
-/* --- SAPU JAGAT FIX: FORCING SAFARI COLOR RENDERING (ACC) --- */
+/* --- SAPU JAGAT FIX: FORCING SAFARI COLOR RENDERING --- */
 input:disabled {
-  -webkit-text-fill-color: currentcolor !important; /* Kunci utama Safari */
+  -webkit-text-fill-color: currentcolor !important;
   color: inherit !important;
-  opacity: 1 !important; /* Mencegah transparan */
+  opacity: 1 !important;
   background-color: inherit;
   border-color: transparent;
+}
+
+/* --- UKURAN TOMBOL DIPERBESAR 2X LIPAT (ACC) --- */
+button {
+  padding: 20px 32px; 
+  font-size: 1.2rem;
+  border-radius: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  text-transform: uppercase;
+  border: 0;
+  transition: all 0.2s;
+}
+.menu-items button {
+  width: 100%;
+  margin-bottom: 12px;
 }
 
 @media screen and (max-width: 768px) {
@@ -49,10 +65,9 @@ header{text-align:center;font-size:2rem;margin-bottom:5px}
 @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
 @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.02); } 100% { transform: scale(1); } }
 .menu-container {position:fixed; top:12px; right:12px; z-index:1000; display:flex; flex-direction:column; align-items:flex-end; gap:8px}
-.menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.9); padding:12px; border-radius:8px; box-shadow:0 4px 20px rgba(0,0,0,0.4)}
+.menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.9); padding:12px; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.4); width: 250px;}
 .menu-items.show {display:flex}
-button{padding:10px 16px; border:0; border-radius:8px; font-weight:600; cursor:pointer; text-transform:uppercase}
-button.main-menu {background:#333; color:#fff; border:2px solid #fff}
+button.main-menu {background:#333; color:#fff; border:2px solid #fff; padding: 15px 25px;}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
 button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
@@ -73,6 +88,8 @@ table{width:100%;border-collapse:collapse}
 th,td{border:1px solid var(--border);padding:6px;text-align:left}
 th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit; color:inherit; background:transparent;}
+
+/* --- CYBERPUNK THEME REFINEMENT (ACC) --- */
 .theme-cyberpunk{--bg:#050505;--card:#0f0f0f;--text:#00ffcc;--border:#ff00ff;--accent:#ffff00;--yellow:#ffff00;}
 .theme-cyberpunk .pulse-line { display:block; }
 .theme-cyberpunk .block { border: 1px solid #00ffcc; box-shadow: 0 0 15px rgba(0,255,204,0.3); }
@@ -84,6 +101,21 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 .theme-cyberpunk #totalMasuk { background:#00ff00; color:#000 !important; box-shadow: 0 0 10px #00ff00; }
 .theme-cyberpunk #totalKeluar { background:#ff0000; color:#fff !important; box-shadow: 0 0 10px #ff0000; }
 .theme-cyberpunk .saldo-akhir { background:#ffff00; color:#000 !important; box-shadow: 0 0 10px #ffff00; }
+
+/* FIX TOMBOL CYBERPUNK: UNGU MAGENTA + TULISAN HITAM (ACC) */
+.theme-cyberpunk .menu-items button {
+    background: #ff00ff !important; 
+    color: #000000 !important; 
+    box-shadow: 0 0 15px #ff00ff;
+    border: 2px solid #00ffcc;
+    text-shadow: none;
+}
+.theme-cyberpunk #adminBtn.primary {
+    background: #00ffcc !important;
+    color: #000000 !important;
+    box-shadow: 0 0 15px #00ffcc;
+}
+
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 #checklistModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
@@ -345,11 +377,7 @@ function recalc(){
 function applyAdminLock(){ 
     document.querySelectorAll('.editable').forEach(i=>{
         i.disabled=!isAdmin;
-        if(!isAdmin) {
-            i.style.cursor = "default";
-        } else {
-            i.style.cursor = "text";
-        }
+        i.style.cursor = !isAdmin ? "default" : "text";
     }); 
 }
 
