--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUST
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 
 function masukWeb() {
-    let kunci = prompt("SILAKAN MASUKKAN NOMOR BLOK RUMAH ANDA (Contoh: D3/5 atau D2/16)");
+    let kunci = prompt("UNTUK MELIHAT LAPORAN KAS, SILAKAN MASUKKAN NOMOR BLOK RUMAH ANDA:");
     if (!kunci) return;
     let bersih = kunci.toUpperCase().replace(/BLOK/g, '').replace(/NO/g, '').replace(/\s+/g, '');
     
@@ -523,3 +523,4 @@ updateUI(); updateDeadlineBanner();
 </script>
 </body>
 </html>
+
